[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/tiles/crate.png" type="Texture" id=1]
[ext_resource path="res://src/entities/crate.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "move_down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 64, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -64, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_up"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 64 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.0, 0.0, 3.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IdleHolder:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Stuck Down"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Stuck Left"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("IdleHolder/Recenter/SpriteHolder/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[node name="Crate" type="Node2D"]
script = ExtResource( 2 )

[node name="IdleHolder" type="Node2D" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 0.9, 0.9 )

[node name="Recenter" type="Node2D" parent="IdleHolder"]
position = Vector2( -32, -32 )

[node name="SpriteHolder" type="Node2D" parent="IdleHolder/Recenter"]

[node name="Sprite" type="Sprite" parent="IdleHolder/Recenter/SpriteHolder"]
texture = ExtResource( 1 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_down = SubResource( 1 )
anims/move_left = SubResource( 2 )
anims/move_right = SubResource( 3 )
anims/move_up = SubResource( 4 )

[node name="IdleAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 5 )

[node name="TickAnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[node name="StuckAnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Stuck Down" = SubResource( 8 )
"anims/Stuck Left" = SubResource( 9 )
"anims/Stuck Right" = SubResource( 10 )
"anims/Stuck Up" = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]
